# AiChineseChess

./: .env.example  .gitignore  README.md  README_EN.md  app.py  config.py  pyproject.toml  requirements.txt  test_app.py  test_deepseek.py  test_gemini.py  test_scroll.html  产品说明文档.md
models/: battle.py  chess_game.py  llm_player.py
static/css/: style.css
static/js/: chess.js
templates/: index.html
