[project]
name = "aichinesechess"
version = "0.1.0"
description = "一个AI驱动的中国象棋对战平台"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask==2.3.3",
    "Flask-SocketIO==5.3.6",
    "python-chess==1.999",
    "openai==1.3.5",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "eventlet==0.33.3",
    "google-genai>=1.4.0",
]
